<resources>
    <string name="app_name">Green Music Player</string>
    <string name="channel_name">Player Notification</string>
    <string name="channel_description">Notification widget for Music Player</string>
    <string name="pause">Pause</string>

    <string name="checkbox1_title">CheckBox 1</string>
    <string name="checkbox1_summary">Summary of CheckBox 1</string>
    <string name="edittext1_title">EditText 1</string>
    <string name="edittext1_summary">Summary of EditText 1</string>
    <string name="list1_title">Тема</string>
    <string name="list1_summary">Выберите цветовое оформление приложения</string>
    <string name="welcome_to_green_music_player">Welcome to Green Music Player</string>
    <string name="play">Play</string>
    <string name="stop_service">Stop Service</string>
    <string name="open_track">Open Track</string>
    <string name="preferences">Preferences</string>
    <string name="open_folder">Open Folder</string>
    <string-array name="ThemeNames">
        <item>Default</item>
        <item>Dark</item>
        <item>AMOLED</item>
    </string-array>
    <string-array name="themes_ids">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>



    <!-- Play Icon -->
    <string name="play_icon_upper_path_data">M 44 32 L 44 64 L 100 64 L 100 64 Z</string>
    <string name="play_icon_bottom_path_data">M 44 96 L 44 64 L 100 64 L 100 64 Z</string>
    <!-- Pause Icon -->
    <string name="pause_icon_upper_path_data">M 32 40 L 32 56  L 96 56 L 96 40 Z</string>
    <string name="pause_icon_bottom_path_data">M 32 88 L 32 72 L 96 72 L 96 88 Z</string>
    <string name="play_icon_group_parts">play_icon_group_parts</string>
    <string name="duration">500</string>
    <string name="disabled_timer">0:00</string>
    <string name="no_artist">No Artist</string>
    <string name="playlist">Playlist</string>
    <string name="no_track">Выберите композицию</string>
</resources>
