<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
            android:enabled="false"
            android:key="chb1"
            android:summary="@string/checkbox1_summary"
            android:title="@string/checkbox1_title">
    </CheckBoxPreference>
    <EditTextPreference
            android:enabled="false"
            android:key="address1"
            android:summary="@string/edittext1_summary"
            android:title="@string/edittext1_title">
    </EditTextPreference>
    <ListPreference
            android:entries="@array/ThemeNames"
            android:entryValues="@array/themes_ids"
            android:key="app_theme"
            android:summary="@string/list1_summary"
            android:title="@string/list1_title">
    </ListPreference>
</PreferenceScreen>