<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:fitsSystemWindows="true">

    <androidx.appcompat.widget.Toolbar
            android:id="@+id/my_toolbar"
            style="@style/Toolbar"/>

    <androidx.constraintlayout.widget.ConstraintLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_marginTop="?attr/actionBarSize"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.main.MainFragment">


        <Button
                android:text="@string/play"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:elevation="4dp"
                android:background="@drawable/oval_button"
                android:id="@+id/play_pause_btn" android:layout_marginTop="68dp"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="140dp"
        />
        <Button
                android:text="@string/stop_service"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/stop_service_btn" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/play_pause_btn"/>
        <Button
                android:text="@string/open_track"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/open_fm_button" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/play_pause_btn" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"/>
        <Button
                android:text="@string/preferences"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/pref_btn" android:layout_marginTop="32dp"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="24dp"/>
        <Button
                android:text="@string/open_folder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/open_folder_btn" android:layout_marginTop="32dp"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="24dp"/>
        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/songs_list"

                android:layout_width="368dp"
                android:layout_height="263dp"
                android:layout_marginTop="12dp"
                app:layout_constraintTop_toBottomOf="@+id/stop_service_btn"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>